[package]
name = "zen_han_converter"
version = "0.1.0"
edition = "2021"
description = "A Rust library for converting between Zenkaku and Hankaku characters in Japanese text."
repository = "https://github.com/cool-japan/zen_han_converter"
keywords = ["japanese", "zenkaku", "hankaku", "conversion", "japan", "han2zen", "zen2han", "kana", "nihongo"]
categories = ["text-processing", "localization"]
license = "Apache-2.0"


[dependencies]
lazy_static = "1.4.0"

[lib]
name = "zen_han_converter"
path = "src/lib.rs"

[[bin]]
name = "han2zen"
path = "src/bin/han2zen.rs"

[[bin]]
name = "zen2han"
path = "src/bin/zen2han.rs"

